# DeGhost

./: .gitignore  LICENSE  pyproject.toml  readme.md
configs/: train.yml
notebooks/: DeGhost_testing.ipynb
scripts/: train.py
src/: model.py
src/deghost/: dataset_util.py  loss.py  model.py  train_util.py
